# stm32f1xx-concurrency-benchmarks

./: .gitignore  Cargo.toml  Embed.toml  README.md
examples/: cs_async_baseline.rs  cs_async_ferrous.rs  cs_baseline.rs  cs_rtic.rs  lat_ferrous.rs  lat_rtic.rs
scripts/: measure_cs.sh  measure_latency.sh  normalize_jitter.sh  normalize_timing.sh  tty_trigger.sh
src/: lib.rs  static_pins.rs  yield.rs
