[package]
name = "stm32f1xx-concurrency-benchmarks"
version = "0.1.0"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2018"
description = "Benchmarks of concurrency approaches on the STM32F1xx family of microcontrollers."
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
stm32f1xx-hal = "0.6"
typenum = "1.12"

[dev-dependencies.async-embedded]
git = "https://github.com/rust-embedded-community/async-on-embedded"
rev = "17aa0f6ef1f1e3639acbce28093c6c30aacaf2c9"

[dev-dependencies.async-stm32f1xx]
git = "https://github.com/mwkroening/async-stm32f1xx"
rev = "0c3037b7bd15b0f700e9ee655924b82614f6c016"

[dev-dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5"
futures = { version = "0.3", default-features = false }
panic-halt = "0.2"
stm32f1xx-hal = { version = "0.6", features = ["rt", "stm32f103", "medium"] }

[profile.release]
codegen-units = 1
lto = true
debug = true
